// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Plugins {
  "value": Array [
    EnvironmentPlugin {
      "defaultValues": Object {},
      "keys": Array [],
    },
  ],
}
`;

exports[` 2`] = `
Plugins {
  "value": Array [
    EnvironmentPlugin {
      "defaultValues": Object {
        "foo": 1,
      },
      "keys": Array [
        "foo",
      ],
    },
  ],
}
`;
